# list-giftr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create-hook.sh
.github/workflows/: lint.yaml  review-build.yaml
tests/integration/: conftest.py
tests/integration/core/views/: test_ideacollection_list.py  test_index.py
tests/unit/core/mixins/: test_owned_object_mixin.py
wishlists/: manage.py
wishlists/core/: admin.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
wishlists/core/migrations/: 0001_initial.py  0002_idealist.py  0003_giftidea.py  0004_rename_idealist_ideacollection.py  0005_alter_ideacollection_owner.py  0006_giftidea_name.py  0007_giftidea_mention_count.py  0008_alter_giftidea_mention_count.py
wishlists/core/templates/core/: app.html  giftidea_confirm_delete.html  giftidea_create_form.html  giftidea_detail.html  giftidea_update_form.html  home.html  ideacollection_confirm_delete.html  ideacollection_create.html  ideacollection_detail.html  ideacollection_list.html  ideacollection_update_form.html  idealist_detail.html  idealist_list.html  robots.txt
wishlists/core/views/: gift_idea.py  idea_collection.py  robots.py
wishlists/templates/: base.html
wishlists/templates/account/: email_confirm.html  login.html  signup.html  verification_sent.html
wishlists/templates/django/forms/: default.html  div.html
wishlists/wishlists/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
