[tool.poetry]
name = "wishlists"
version = "0.1.0"
description = ""
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
django-tailwind = "^3.8.0"
gunicorn = "^21.2.0"
psycopg = "^3.1.16"
django-allauth = "^0.59.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pre-commit = "^3.6.0"
django-browser-reload = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
